--- a/index.html
+++ b/index.html
@@ -54,5 +54,10 @@
         <img src="images/work4.jpg" alt="Works 4">
         <img src="images/work1.jpg" alt="Works 4">
     </div>
+    
+
+    <footer>
+        <p>&copy 2018: Enginuity Coding Academy</p>
+    </footer>
 </body>
 </html>
