change footer content

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     
 
     <footer>
-        <p>&copy 2018: Enginuity Coding Academy</p>
+        <p>&copy 2018: Enginuity Coding Academy - www.enginuitycodingacademy.com</p>
     </footer>
 </body>
 </html>
